# open-source-python-lib-coding-agent

./: .gitignore  Dockerfile  EDA-OS-Python-Lib.ipynb  Git_Clone_Commit_POC.ipynb  README.md  backend.py  frontend.py  pyproject.toml  streamlit.py  streamlit_app.py  websearch.ipynb  websearch_streamlit.py
.github/workflows/: deploy.yml  new.yml
POC/: EDA-OS-Python-Lib.ipynb  SQLAgentPOC.ipynb  WebSearchTavillyPOC.ipynb  retreive_context.ipynb
airflow/: Dockerfile  pyproject.toml  requirements.txt
airflow/dags/: dag_load_documentation.py  pipeline_dag_load_documentation.py  pipeline_dag_load_github_repo.py
airflow/dags/data_load/: docs_scrape_page.py  load_into_pinecone.py  parameter_config.py  process_docs.py  scrape_url.py
airflow/dags/data_load/configuration/: parameter_config.py
airflow/dags/data_load/process_documentation_pages/: load_into_pinecone.py  process_docs.py  scrape_url.py
airflow/dags/data_load/process_documentation_pages/utils/: helper_functions.py
airflow/dags/data_load/process_github_repo/: extract_code.py  load_ipynb_details_to_snowflake.py  load_md_details_to_snowflake.py  load_py_details_to_snowflake.py  process_ipynb_file.py  process_md_file.py  process_py_file.py  repo_clone.py
airflow/dags/data_load/process_github_repo/processors/: markdown_processor.py  notebook_processor.py
airflow/dags/data_load/process_github_repo/snowflake_loaders/: db_connection.py  snowflake_data_loader.py
airflow/dags/data_load/utils/: helper_functions.py
architecture-diagram/: architecture-diagram.ipynb
auth/: Login.py  Logout.py  register.py
fast_api/: fast_api.py
fast_api/config/: db_connection.py
fast_api/models/: user_models.py
fast_api/routes/: agent_routes.py  github_routes.py  user_auth.py  user_routes.py
fast_api/schema/: request_schema.py
fast_api/services/: auth_service.py  github_service.py  retrieval.py  user_service.py
fast_api/services/langgraph_agents/: configuration.py  utils.py
fast_api/services/langgraph_agents/code_retrieval_graph/: configuration.py  graph.py  state.py
fastapi_backend/fast_api/: fast_api.py
fastapi_backend/fast_api/routes/: agent_routes.py  github_routes.py  user_routes.py
fastapi_backend/fast_api/schema/: request_schema.py
fastapi_backend/fast_api/services/: auth_service.py  github_service.py  user_service.py
fastapi_backend/langgraph_graphs/: retrieval.py
fastapi_backend/langgraph_graphs/langgraph_agents/code_generation_graph/: graph.py  state.py
fastapi_backend/langgraph_graphs/langgraph_agents/code_retrieval_graph/: configuration.py  graph.py  state.py
fastapi_backend/langgraph_graphs/langgraph_agents/error_handling_graph/: graph.py  (+1 more)
features/: code_generation_page.py  error_handling_page.py  github_clone.py  github_credentials_page.py  github_repo_page.py  how_to_guide_page.py
github_repo/: code_files.py  extract_code.py  ipynbfile.ipynb  markdown.ipynb  repo_clone.py  snowflake_data_loader.py
github_repo/processors/: markdown_processor.py  notebook_processor.py  python_processor.py
github_repo/snowflake_loaders/: db_connection.py  snowflake_data_loader.py
langgraph_graphs/: constants.py  retrieval.py
langgraph_graphs/langgraph_agents/: configuration.py  utils.py
langgraph_graphs/langgraph_agents/code_generation_graph/: graph.py  state.py
langgraph_graphs/langgraph_agents/code_retrieval_graph/: configuration.py  graph.py  prompts.py  state.py
langgraph_graphs/langgraph_agents/error_handling_graph/: graph.py  state.py
logging_module/: logging_config.py
streamlit_frontend/: streamlit_app.py
streamlit_frontend/auth/: Login.py  register.py
streamlit_frontend/features/: code_generation_page.py  error_handling_page.py  github_credentials_page.py
streamlit_frontend/utils/: app_launcher.py  chunk_processors.py  github_credentials_updater.py
utils/: api_helpers.py  app_launcher.py  chat_helpers.py  chunk_processors.py
(+7 files in other folders)
