[tool.poetry]
name = "open-source-code-agent"
version = "0.1.0"
description = "Building open source code agent"
authors = ["Dipenpatel3 <patel.dipe@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
snowflake-connector-python = "^3.12.3"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
