[tool.poetry]
name = "open-source-python"
version = "0.1.0"
description = "Building Agentic systems using Langraph"
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-text-splitters = "^0.3.2"
langchain-huggingface = "^0.1.2"
langchain-pinecone = "^0.2.0"
langchain-openai = "^0.2.6"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langgraph = "^0.2.45"
boto3 = "^1.35.61"
snowflake-connector-python = "^3.12.3"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"